force-app/main/default/objects/nFORCE__System_Properties__c/fields/nFORCE__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The field is required. It indicates if the system property is active. If the system property is not active it will not be used.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>