force-app/main/default/objects/nFORCE__System_Properties__c/fields/nFUSE__Is_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Is_Encrypted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A required field that indicates if the system property value is encrypted; its default is false.</description>
    <label>Is Encrypted</label>
    <type>Checkbox</type>
</CustomField>